cmake_minimum_required(VERSION 3.26)
project(C_ACM C)

set(CMAKE_C_STANDARD 11)

add_executable(C_ACM
        MaTiBei/MC0314.c
        MaTiBei/MC0315.c
        MaTiBei/MC0321.c
        LeeCode/61_rotateListNode.c
        LeeCode/20_isValid_kuohao.c
        Programming_problem/_219_1.c
        Programming_problem/_219_2.c
        Programming_problem/_219_3.c
        Programming_problem/_219_4.c)
